objects/EZProtect_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>EZProtectBaseURL__c</fullName>
        <label>EZProtect Base URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IntegrationUserID__c</fullName>
        <label>IntegrationUserID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unblocked_Downloads_Profile_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unblocked Downloads Profile Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>EZProtect Setting</label>
    <pluralLabel>EZProtect Settings</pluralLabel>
</CustomObject>